@@ -1,10 +1,9 @@
-// -*- mode: C++; c-indent-level: 4; c-basic-offset: 4; tab-width: 8 -*-
-//
+
 // RcppParamsExample.h: Rcpp R/C++ interface class library RcppParams example
 //
 // Copyright (C) 2005 - 2006 Dominick Samperi
 // Copyright (C) 2008        Dirk Eddelbuettel
-// Copyright (C) 2009 - 2011 Dirk Eddelbuettel and Romain Francois
+// Copyright (C) 2009 - 2023 Dirk Eddelbuettel and Romain Francois
 //
 // This file is part of Rcpp.
 //
@@ -67,7 +66,7 @@ RcppExport SEXP classicRcppParamsExample(SEXP params) {
     }
     
     if(exceptionMesg != NULL)
-	Rf_error(exceptionMesg);
+	Rf_error("%s", exceptionMesg);
 
     return rl;
 }
